mise a niveu du footer

--- a/css/styles1-old.css
+++ b/css/styles1-old.css
@@ -93,10 +93,12 @@
     /**************************** FOOTER ********************************/
     footer
         {
-            background-color:#ce352c;
-            display: flex;
-            justify-content: center;
-            pos;
+    background-color: #ce352c;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
         }
     
     .logofooter
