--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,14 @@ body
 {
     background-color: white;
     line-height: "3,2em";
+    height:100%;
 }
 
+
+/*****************************HTML*************************/
+html{
+    height:100%;
+}
 /**************************** NAV ************************/
 nav
 {
