--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,13 @@ body
 {
     background-color: white;
     line-height: "3,2em";
-    height:100%;
+    height:100% !important;
 }
 
 
 /*****************************HTML*************************/
 html{
-    height:100%;
+    height:100% !important;
 }
 /**************************** NAV ************************/
 nav
