--- a/styles-old.css
+++ b/styles-old.css
@@ -5,6 +5,7 @@
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
         background-color: beige; 
         color: brown;
+        background-image: url('expert.jpg')>
     }
     
     
@@ -82,7 +83,7 @@ h2 {
     justify-content: center;
     margin-bottom: 1vh;
     color: #ce352c;
-    width: 14%;
+    width: 33%;
 }
     
 
@@ -103,9 +104,7 @@ td {background-color: whitesmoke !important; }
         background-color: #ce352c;
         display: flex;
         justify-content: center;
-        position: absolute;
-        bottom: 0;
-        width: 100%;    }
+        }
     
     .logofooter
         {
@@ -155,9 +154,7 @@ td {background-color: whitesmoke !important; }
     padding-top: 35px;
     padding-bottom: 30px;
     width: 450px;
-    position: absolute;
-    margin-top: 4px;
-    margin-left: 35%;
+    margin: 0 auto;
     -moz-border-radius: 4px;
     -webkit-border-radius: 31px;
     border: #a52821;
@@ -313,13 +310,7 @@ input:focus, textarea:focus {
         width: 83%;
     }
 
-    .btn-success
-    {
-        margin: 0 auto;
-        display: flex;
-        margin-bottom: 27vh;
-        justify-content: center;
-
+    
     }
 
     /***************************************MAQUETTE 4***********************************/
@@ -443,10 +434,7 @@ input:focus, textarea:focus {
         padding-top: 4vh;
     }
     
-    .button
-    {
-        height: 13vh;
-    }
+    
 
     .container8
     {
