--- a/styles-old.css
+++ b/styles-old.css
@@ -76,8 +76,8 @@
     display: flex;
     justify-content: center;
     color: #ce352c;
-    margin-top: 10vh;
-}
+    margin-top:7vh;
+    }
 
 
 
@@ -92,9 +92,18 @@ h2 {
  footer {
     width: 33%;
     background-color: white;
-
+    font-family: cursive;
     width: 25%;
 
+}
+
+/*****************************Logo*******************************/
+
+.logosociete
+{
+    margin: 0 auto;
+    display: flex;
+    height: 5vh
 }
 
 
@@ -125,6 +134,10 @@ tbody
     background-color: #e6e6e6;
     color: black;
 } 
+table tbody tr td a 
+{
+    color:black
+}
 
 
     /**************************** FOOTER ********************************/
@@ -365,7 +378,7 @@ label span {
     /***************************************IMG****************************************/
     td img
     {
-        margin: 0px 20px;
+        height:3vh;
     }
     /***************************************MAQUETTE 3***********************************/
     .societegerer 
@@ -383,7 +396,7 @@ label span {
     }
 
     
-}
+
 
     /***************************************MAQUETTE 4***********************************/
     .col-form-label {
@@ -534,12 +547,7 @@ label span {
         right:-80px
     }
     
-    .item a
-        border: none;
-        display: block;
-        padding: 10px;
-        text-decoration: none;
-    }
+ 
     
     .item a img{
         display:block;
@@ -552,9 +560,8 @@ label span {
         position:fixed;
         top:0;
         left:0;
-        /*background:url('http://demo.tutorialzine.com/2010/12/better-confirm-box-jquery-css3/jquery.confirm/ie.png');*/
         background: -moz-linear-gradient(rgba(11,11,11,0.1), rgba(11,11,11,0.6)) repeat-x rgba(11,11,11,0.2);
-        background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(11,11,11,0.1)), to(rgba(11,11,11,0.6))) repeat-x rgba(11,11,11,0.2);
+        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(11,11,11,0.1)), to(rgba(11,11,11,0.6))) repeat-x rgba(11,11,11,0.2);
         z-index:100000;
       
     z-index: 1040;
@@ -646,4 +653,8 @@ label span {
 
     form label{
             max-width: 12.666667%;
+    }
+
+    button a{
+        color:white;
     }
