--- a/styles-old.css
+++ b/styles-old.css
@@ -83,7 +83,7 @@
 
 h2 {
     font-size: 30pxrem;
-    margin: 13px auto;
+    margin: 6% auto;
     display: flex;
     justify-content: center;
     margin-bottom: 1vh;
@@ -143,7 +143,6 @@ table tbody tr td a
 }
 .table tbody+tbody {border:none;}
 
-
     /**************************** FOOTER ********************************/
     footer   {
         background-color: #ce352c;
@@ -172,7 +171,6 @@ table tbody tr td a
     { 
         color: white;
         margin-top: 3vh;
-        font-family: monospace;
         font-size: larger;
     }
 
