--- a/styles-old.css
+++ b/styles-old.css
@@ -2,7 +2,7 @@
     body
     {
         line-height: "3,2em";
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
+        font-family:  'Arial Narrow', Arial, sans-serif !important;
         color: black;
   
     }
@@ -83,7 +83,7 @@
 
 h2 {
     font-size: 30pxrem;
-    margin: 6% auto;
+    margin: 0% auto;
     display: flex;
     justify-content: center;
     margin-bottom: 1vh;
@@ -252,7 +252,6 @@ table tbody tr td a
 
 a{
     color: #ce352c;
-    text-decoration: underline;;
 }
 
 a:hover {
