modification des screen modfié

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ footer
         display: flex;
         justify-content: center;
         position: fixed;
-        bottom: 0%;
+        bottom: 0% !important;
         width: 100%;
     
     }
