--- a/styles-old.css
+++ b/styles-old.css
@@ -1,9 +1,8 @@
+  
     /*********************** BODY *****************************/
     body
     {
         line-height: "3,2em";
-
-
         color: black;
   
     }
@@ -93,7 +92,6 @@ h2 {
  footer {
     width: 33%;
     background-color: white;
-    font-family: cursive;
     width: 25%;
 
 }
@@ -173,9 +171,10 @@ table tbody tr td a
     }
     .copyright
     { 
-        color: white;
-        margin-top: 3vh;
-        font-size: larger;
+    height: 3vh;
+    margin-top: 28px;
+    margin-right: 7px;
+
     }
 
     /****************************************Connexion******************************/
@@ -685,7 +684,6 @@ button {
   padding: 8px;
   text-align: center;
   cursor: pointer;
-  width: 100%;
   font-size: 18px;
 background-image: linear-gradient(to bottom, #729EBF 0%, #333A40 100%);
 color: white;
