mofid fait marquant

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,10 +80,10 @@ header
     background-color: #ce352c;
 }
 
-li, a:hover 
+/* li, a:hover 
 {
     background-color: #ce352c;
-}
+} */
 
 /* h1
 {
