--- a/styles-old.css
+++ b/styles-old.css
@@ -104,7 +104,10 @@ h2 {
     display: flex;
     height: 5vh
 }
-
+/****************************************BUTTON****************************/
+.btn-licence {
+    color:white
+}
 
 
 
